--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.3",
+    "dotenv": "^17.2.0",
+    "firebase-admin": "^13.4.0",
+    "firebase-functions": "^4.3.0",
     "lucide-react": "^0.503.0",
+    "node-fetch": "^2.7.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
